Changes :  Tab Alignment issue.

--- a/src/styles/default/componentstyles/tab.scss
+++ b/src/styles/default/componentstyles/tab.scss
@@ -48,7 +48,8 @@
   width: 100%;
   position: relative;
   //float: left;
-  padding: 10px;
+  //padding: 10px;
+  padding: 20px 20px 10px 0px;
 }
 
 
